# USP-astronomia

./: README.md
tcc-extragalactic-open-set/: .gitignore  README.md  pyproject.toml
tcc-extragalactic-open-set/.github/workflows/: ci.yml
tcc-extragalactic-open-set/configs/: default.yaml
tcc-extragalactic-open-set/data/catalogs/: sample_catalog.csv
tcc-extragalactic-open-set/src/tccastro/: __init__.py  cli.py  config.py
tcc-extragalactic-open-set/src/tccastro/eval/: metrics.py  plots.py
tcc-extragalactic-open-set/src/tccastro/features/: __init__.py  classical.py
tcc-extragalactic-open-set/src/tccastro/io/: catalog.py
tcc-extragalactic-open-set/src/tccastro/models/: cnn.py  rf.py
tcc-extragalactic-open-set/src/tccastro/openset/: __init__.py  calibrate.py  scores.py
tcc-extragalactic-open-set/src/tccastro/preprocess/: normalize.py  patches.py
tcc-extragalactic-open-set/src/tccastro/surveys/: __init__.py  base.py  legacy.py  ps1.py  sdss.py
tcc-extragalactic-open-set/src/tccastro/utils/: cache.py  http.py
tcc-extragalactic-open-set/tests/: test_cache.py  test_catalog.py  test_end_to_end_mvp.py  test_http_retry.py  test_openset_scores.py  test_patches.py
